--- a/events.html
+++ b/events.html
@@ -107,7 +107,8 @@
 		<div class="row">
 		  <div class="leftcolumn">
 		    <div class="card">
-		      <h2>KRAFTWAGEN(EXTERNAL)-Techtatva</h2>
+		      <h2>KRAFTWAGEN</h2>
+					<h2>(EXTERNAL)-Techtatva</h2>
 		      <h5>Date:May 05, 2021</h5>
 		      <img src="img/E1.jpg" height="400">
 					<img src="img/E2.jpg" height="400">
@@ -116,7 +117,8 @@
 					<p>Day 2 brings these bots to live ,where all participants control their bot on the harsh terrains in a time bound environment. The participant with the fastest timing wins the grand total from a pool of 12000. The whole experience is electric and also serves an educational purpose to its participants by providing hands on experience.</p>
 		    </div>
 				<div class="card">
-				 <h2>AUTOWEEK(EXTERNAL)</h2>
+				 <h2>AUTOWEEK</h2>
+				 <h2>(EXTERNAL)</h2>
 				 <h5>Date:May 05, 2021</h5>
 				 <img src="img/E3.jpg" height="400">
 				 <img src="img/E4.jpg" height="400">
@@ -125,13 +127,15 @@
 				<p>The aim of the event is for the participants to have an upper hand in the knowledge of automobiles and that too comprising both, of theoretical and practical knowledge.</p>
 			 </div>
 			 <div class="card">
-				<h2>IC ENGINES WORKSHOP(INTERNAL)</h2>
+				<h2>IC ENGINES WORKSHOP</h2>
+				<h2>(INTERNAL)</h2>
 				<h5>Date:May 05, 2021</h5>
 				<img src="img/E5.jpg" height="400">
 			 <p>This workshop aims at educating us about the basic functionality, working of an internal combustion engine. It provides in depth knowledge of various aspects of engines like the difference between a petrol and diesel engine, engines used in heavy vehicles. This workshop further throws light and provides in depth explanation of the various components of an IC engine like the spark plug, crank shaft, flywheel,etc . This workshop also talks about maintaining, oiling and servicing the engines of our cars for a smooth hassle free travel. Finally aspects like formulas related to IC engines. </p>
 			</div>
 			<div class="card">
-			 <h2>UNSCREW ENGINE (EXTERNAL)</h2>
+			 <h2>UNSCREW ENGINE</h2>
+			 <h2>(EXTERNAL)</h2>
 			 <h5>Date:May 05, 2021</h5>
 			 <img src="img/E6.jpg" height="400">
 			 <img src="img/E7.jpg" height="400">
@@ -140,13 +144,15 @@
  			</p>
 		 </div>
 		 <div class="card">
-			<h2>JET ENGINES WORKSHOP(EXTERNAL)</h2>
+			<h2>JET ENGINES WORKSHOP</h2>
+				<h2>(EXTERNAL)</h2>
 			<h5>Date:May 05, 2021</h5>
 			<img src="img/E8.jpg" height="400">
 		 <p>The jet engines workshop focuses on building a technical understanding of the various types of jet engines and the distinct differences between them by giving its participants a glimpse into the intriguing functioning of jet engine and a wind tunnel. The event stretches to a span of 2 days. Day 1 is theoretical and various concepts such as lift, drag, wing concepts and a lot more exciting concepts were covered. Further dissection of a jet engine took place in cross section which enabled to view the various parts and functions of different parts. Day 2 begins in the propulsion lab where participants visualised the aeronautical designs from the previous day and ends with the demonstration of a functioning water tunnel used to run aerodynamic tests.  </p>
 		</div>
 		<div class="card">
-		 <h2>ENGINES WORKSHOP(Online)</h2>
+		 <h2>ENGINES WORKSHOP</h2>
+		 <h2>(Online)</h2>
 		 <h5>Date:December 19, 2021</h5>
 		 <img src="img/F2.png" height="400">
 		 <img src="img/F3.png" height="400">
@@ -154,7 +160,8 @@
 		<p>The workshop conducted by the managing committee (ManComm) of SAE-IM last November was aimed at introducing our juniors to the marvelous world of engines. Several topics from types of engines and parts of an engine to turbochargers and superchargers were explained in great detail during the course of this workshop. The workshop not only helped the juniors with expanding their knowledge on engines, but it also helped the ManComm enhance their knowledge on several automotive concepts.</p>
 	 </div>
 	 <div class="card">
-		<h2>Fusion360  WORKSHOP(Online)</h2>
+		<h2>Fusion360  Workshop</h2>
+		<h2>(Online)</h2>
 		<h5>Date:January , 2021</h5>
 		<img src="img/F5.png" height="400">
 	 <p></p>
