--- a/blog.html
+++ b/blog.html
@@ -153,6 +153,7 @@ Although regenerative braking has it’s disadvantages, it’s advantages far ou
 			<p><b>HOW DOES ONE WORK?</b></p>
 			<p>While a turbocharger uses wasted exhaust gases to produce more power, superchargers operate off a different part of the engine. Superchargers are powered mechanically by the belt or chain that goes to the crankshaft. They force more air into the engine so that more fuel can be burned, which in turn creates more energy. Superchargers increase air intake by compressing the air above atmospheric pressure.</p>
 			<p>A supercharger draws its power directly from the crankshaft. Most of them use an accessory belt, which is wrapped around a pulley that is connected to a drive gear. Once the drive gear rotates, it rotates the compressor gear. The compressor's job is to draw in more air and squeeze it into a smaller space. This is then discharged into the intake manifold.</p>
+      <div class="card">
 			<h5><b>DIFFERENCE BETWEEN TURBOCHARGER AND SUPERCHARGER</b></h5>
 		  <table>
       <tr>
@@ -246,6 +247,7 @@ continuous supply of energy by the crankshaft.</td>
 </tr>
 	 </table>
     </div>
+	</div>
     <div class="card">
       <h2><b>The Lotus Evija Part-1</b></h2>
       <h5>Name:Kluviert Correia, Jun 26, 2021</h5>
