--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 	<div class="overlay"></div>
 	<div id="header" class="container text-center">
 		<h1 class="display-1">SAE</h1>
-		<p >Society of Automobile Engineers</p>
+		<p >Society of Automotive Engineers</p>
 	</div>
 	<div class="inner">
 		<span class="display-4">
