--- a/events.html
+++ b/events.html
@@ -109,7 +109,7 @@
 		    <div class="card">
 		      <h2>KRAFTWAGEN</h2>
 					<h2>(EXTERNAL)-Techtatva</h2>
-		      <h5>Date:May 05, 2021</h5>
+		      <h5>Date:November 2019</h5>
 		      <img src="img/E1.jpg" height="400">
 					<img src="img/E2.jpg" height="400">
 					<p>Kraftwagen is an outdoor event at Techtatva and its participants would have to build their own bot which would be tested on a variety of hard terrains ranging from hanging bridges ,uneven rocks and even underwater.</p>
@@ -119,7 +119,7 @@
 				<div class="card">
 				 <h2>AUTOWEEK</h2>
 				 <h2>(EXTERNAL)</h2>
-				 <h5>Date:May 05, 2021</h5>
+				 <h5>Date:January 2020</h5>
 				 <img src="img/E3.jpg" height="400">
 				 <img src="img/E4.jpg" height="400">
 				<p>Autoweek is an event organized by SAE-IM to learn and gain experience on every component of an automobile including Engine, Transmission, Chassis, Suspension, Brakes, Tires; just name it.</p>
@@ -129,14 +129,13 @@
 			 <div class="card">
 				<h2>IC ENGINES WORKSHOP</h2>
 				<h2>(INTERNAL)</h2>
-				<h5>Date:May 05, 2021</h5>
 				<img src="img/E5.jpg" height="400">
 			 <p>This workshop aims at educating us about the basic functionality, working of an internal combustion engine. It provides in depth knowledge of various aspects of engines like the difference between a petrol and diesel engine, engines used in heavy vehicles. This workshop further throws light and provides in depth explanation of the various components of an IC engine like the spark plug, crank shaft, flywheel,etc . This workshop also talks about maintaining, oiling and servicing the engines of our cars for a smooth hassle free travel. Finally aspects like formulas related to IC engines. </p>
 			</div>
 			<div class="card">
 			 <h2>UNSCREW ENGINE</h2>
 			 <h2>(EXTERNAL)</h2>
-			 <h5>Date:May 05, 2021</h5>
+			 <h5>Date:February 2020</h5>
 			 <img src="img/E6.jpg" height="400">
 			 <img src="img/E7.jpg" height="400">
 			<p>The unscrew engine workshop is one of our flagship events.<br>
@@ -146,9 +145,22 @@
 		 <div class="card">
 			<h2>JET ENGINES WORKSHOP</h2>
 				<h2>(EXTERNAL)</h2>
-			<h5>Date:May 05, 2021</h5>
+			<h5>Date:March 2020</h5>
 			<img src="img/E8.jpg" height="400">
 		 <p>The jet engines workshop focuses on building a technical understanding of the various types of jet engines and the distinct differences between them by giving its participants a glimpse into the intriguing functioning of jet engine and a wind tunnel. The event stretches to a span of 2 days. Day 1 is theoretical and various concepts such as lift, drag, wing concepts and a lot more exciting concepts were covered. Further dissection of a jet engine took place in cross section which enabled to view the various parts and functions of different parts. Day 2 begins in the propulsion lab where participants visualised the aeronautical designs from the previous day and ends with the demonstration of a functioning water tunnel used to run aerodynamic tests.  </p>
+		</div>
+		<div class="card">
+			<h2>KRAFTWAGEN</h2>
+			<h2>(ONLINE)-Techtatva</h2>
+			<h5>Date:November 2020</h5>
+			<img src="img/F6.jpeg" height="400">
+			<img src="img/F7.jpeg" height="400">
+			<img src="img/F8.jpeg" height="400">
+			<img src="img/F9.jpeg" height="400">
+	    <p>Kraftwagen continues even through the pandemic!<br>
+The event which was until last year a completely outdoor event could not be stopped by a mere pandemic. The kraftwagen family stood together and made sure that the name of an event like kraftwagen wont be forgotten by continuous efforts by our managing committee and dedicated volunteers.</p>
+<p>The event stretched for 2 days where the first day was where the participants took part in a quiz to earn points or currency to be used in an auction planned for day 2.</p>
+<p>Here on the second day was when the real thrill began when people voiced their prices through a sweaty auction for different car parts to make the best version of their car! Being rich was not the only requirement to win here but it was necessary to be smart in your bidding as well. Here after rigorous rounds of bidding and the auction people were finally ready to fabricate their car from the ground up, securing the winning spot to the team having the best version of their automobile providing superior performance.</p>
 		</div>
 		<div class="card">
 		 <h2>ENGINES WORKSHOP</h2>
@@ -162,15 +174,19 @@
 	 <div class="card">
 		<h2>Fusion360  Workshop</h2>
 		<h2>(Online)</h2>
-		<h5>Date:January , 2021</h5>
-		<img src="img/F5.png" height="400">
-	 <p></p>
+		<h5>Date:January 2021</h5>
+		<video width="1000" controls>
+    <source src="img/video1.mp4" type="video/mp4">
+    </video>
+	 <p>In the first week of January, Pratik and Abhishek from man-com organised an internal workshop on Fusion 360 to introduce their juniors to the world of CAD. The two-day workshop entailed the basics of sketching and other commands on day one, with a practical experience by designing and assembling the elliptical trammel on day two. We also covered the modern rendering workspace of the software towards the latter half. With the sun setting down, it all concluded with a sense of learning something new and deepening the bond among us.</p>
 	</div>
 	 <div class="card">
 		<h2>Canva Workshop</h2>
+		<h2>(Online)</h2>
 		<h5>Date:June 24, 2021</h5>
+		<img src="img/F0.jpeg" height="400">
 		<img src="img/F1.jpeg" height="400">
-	 <p>J</p>
+	 <p>Workshop for teaching basic graphic designing to our Working Committee was organized. The workshop comprised of getting familiar with the interface of Canva, an open source software, getting basic designing tips, using Canva for making templates and plenty of insights were provided by our graphics team to upcoming face of our club.</p>
 	</div>
 
 		    <hr style=" background:black">
@@ -202,7 +218,7 @@
          <p>Manipal, Udupi,</p>
          <p>Karnataka - 576104</p>
 				 <p>Email address: saemanipal@gmail.com</p>
-				 <p>Developers: Abhishek Rao,Harshita Sachan, Devansh Singh & Ishita Vudanrao<p>
+				 <p>Designed and Developed(in House): Abhishek Rao,Harshita Sachan, Devansh Singh & Ishita Vudanrao<p>
     </div>
   </div>
   </div>
