--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
          <p>Manipal, Udupi,</p>
          <p>Karnataka - 576104</p>
 				 <p>Email address: saemanipal@gmail.com</p>
-				 <p>Developers: Abhishek Rao,Harshita Sachan, Devansh Singh & Ishita Vudanrao<p>
+				 <p>Designed and Developed(in House): Abhishek Rao,Harshita Sachan, Devansh Singh & Ishita Vudanrao<p>
     </div>
   </div>
   </div>
