--- a/blog.html
+++ b/blog.html
@@ -107,12 +107,16 @@
 
 <!---Blog content-->
 <div class="row">
-  <div class="column" onclick="openTab('b1');" style="background:green;">
+  <div class="column" onclick="openTab('b1');" style="background:green;" width="1000">
     Miscellaneous Articles
   </div>
+</div>
+<div class="row">
   <div class="column" onclick="openTab('b2');" style="background:blue;">
     Articles on Engines
   </div>
+</div>
+<div class="row">
 	<div class="column" onclick="openTab('b3');" style="background:Red;">
    Articles on Electric Vehicles(EVs)
   </div>
