--- a/blog.html
+++ b/blog.html
@@ -112,12 +112,12 @@
   </div>
 </div>
 <div class="row">
-  <div class="column" onclick="openTab('b2');" style="background:blue;">
+  <div class="column" onclick="openTab('b2');" style="background:blue;"width="1000">
     Articles on Engines
   </div>
 </div>
 <div class="row">
-	<div class="column" onclick="openTab('b3');" style="background:Red;">
+	<div class="column" onclick="openTab('b3');" style="background:Red;"width="1000">
    Articles on Electric Vehicles(EVs)
   </div>
 </div>
